--- a/server.properties
+++ b/server.properties
@@ -4,7 +4,7 @@ allow-flight=true
 allow-nether=true
 broadcast-console-to-ops=true
 broadcast-rcon-to-ops=true
-difficulty=normal
+difficulty=hard
 enable-command-block=true
 enable-jmx-monitoring=false
 enable-query=false
@@ -31,7 +31,7 @@ max-tick-time=60000
 max-world-size=29999984
 motd=Better MC [FORGE] 1.20.1
 network-compression-threshold=256
-online-mode=true
+online-mode=false
 op-permission-level=4
 player-idle-timeout=0
 prevent-proxy-connections=false
